--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Vaccines Dashboard |Home</title>
-    </head>
+{% extends 'base.html' %}
 
-    <body>
-        <p>LINKS</p>
-        <ul>
-            <li><a href="import">Import Excel workbook</a></li>
-        </ul>
-    </body>
 
-</html>
+{% block title %}Vaccines Dashboard |Home{% endblock %}
+
+{% block content %}
+
+<ul>
+    <li><a href="import">Import Excel workbook</a></li>
+</ul>
+{% endblock %}
