Minor UX changes

--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -79,7 +79,7 @@
                         <a href="">Fridge Coverage</a>
                     </li>
                     <li class="">
-                        <a href="">Survellance</a>
+                        <a href="">Surveillance</a>
                     </li>
                     <li class="">
                         <a href="">Admin</a>
