--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -22,34 +22,6 @@ color: #1FB5AD;
 <script type="text/javascript" src="{% static 'highcharts-release/highcharts.js' %}"></script>
 <script type="text/javascript" src="{% static 'highcharts-release/highcharts-more.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/sparkline/jquery.sparkline.js' %}"></script>
-<script type="text/javascript" src="{% static 'item-dashboard.js' %}"></script>
-<script type="text/javascript" src="{% static 'dashboard.js' %}"></script>
-<script type="text/javascript" src="{% static 'dashboard-budget.js' %}"></script>
-<script language="javascript">
-    $(window).load(function(){ 
-    $('#cover').fadeOut(1000);
-    });
-
-    $(function() {
-        $('.bullet').sparkline('html',
-                {type: 'bullet',
-                    height: '20px',
-                    width: '8em',
-                targetWidth: 3,
-                targetColor: 'rgba(44, 160, 44, 1)',
-                performanceColor: '#2A2A2A',
-                rangeColors: ['#FFCC5B','#84D35D','#FFCC5B']});
-    });
-
-    var generalLink = $('.general-dash-link');
-    var ordersLink = $('.orders-dash-link');
-    var budgetLink = $('.budget-dash-link');
-
-    analytics.trackLink(generalLink, 'Clicked General Dashboard Link');
-    analytics.trackLink(ordersLink, 'Clicked Orders Dashboard Link');
-    analytics.trackLink(budgetLink, 'Clicked Budget Dashboard Link');
-    analytics.page('Dashboard')
-</script>
 {% endblock %}
 
 {% block title %}Dashboard{% endblock %}
@@ -69,26 +41,31 @@ color: #1FB5AD;
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs" role="tablist">
                     <li class="active">
-                        <a href="#general" role="tab" data-toggle="tab" class="general-dash-link">Coverage</a>
+                        <a href="#stockonhand" role="tab" data-toggle="tab" class="general-dash-link">STOCK ON HAND </a>
                     </li>
                     <li>
-                        <a href="#orders" role="tab" data-toggle="tab" class="orders-dash-link">Stock Management</a>
+                        <a href="#amc" role="tab" data-toggle="tab" class="orders-dash-link">AMC</a>
                     </li>
                     <li>
-                        <a href="#budget" role ="tab" data-toggle="tab" class="budget-dash-link">Fridge Coverage</a>
+                        <a href="#monthsleft" role ="tab" data-toggle="tab" class="budget-dash-link">MONTHS OF STOCK LEFT</a>
+                    </li>
+                    <li>
+                        <a href="#updaterate" role ="tab" data-toggle="tab" class="budget-dash-link">STOCK UPTAKE RATE</a>
+                    </li>
+                    <li>
+                        <a href="#wastagerate" role ="tab" data-toggle="tab" class="budget-dash-link">WASTAGE RATE</a>
                     </li>
                 </ul>
             </div>
             <div class="panel-body">
                 <!-- Tab panes -->
                 <div class="tab-content">
-                    <div class="tab-pane active" id="general">
+                    <div class="tab-pane active" id="stockonhand">
                         <div class="row">
                             <div class="col-sm-4">
                                 <div class="panel panel-default">
                                     <div class="panel-heading">
-                                        <h4>Facilities with <a href={% if request.GET.budget %}"/">Lowest</a>
-                                        {% else %}"?budget=lowest">Highest</a>{% endif %} Budget Utilization, Current FY</h4>
+                                        <h4>Coverage</h4>
                                     </div>
                                     <div class="panel-body">
                                         <table class="table">
@@ -142,7 +119,7 @@ color: #1FB5AD;
 
                         </div>
 
-                    <div class="tab-pane" id="orders">
+                    <div class="tab-pane" id="amc">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="panel panel-default">
@@ -240,7 +217,205 @@ color: #1FB5AD;
                         </div>
                     </div>
 
-                    <div class="tab-pane" id="budget">
+                    <div class="tab-pane" id="monthsleft">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="panel panel-default">
+                                    <div class="panel-body">
+                                Deviations are calculated using Budget ceiling divided by number of cycles. Budget spent is within bounds when the budget is 90 - 110% of cycle budget.
+                                Budget that exceed a cycle budget by more than 110% are "over", and Budget that are less than 90% of a cycle budget are "under".
+                                    </div>
+                                </div>
+                            </div>
+                            <div class ="col-md-12">
+                                <div class ="panel panel-default">
+                                    <div class="panel-body">
+                                        <div class="col-md-4">
+                                        <div id="bgt-ccr-chart">
+                                            <h4 class="text-center">CCR Region <a class="reset" href="javascript:bgtCcrChart.filterAll('budgetGroup');dc.redrawAll('budgetGroup');" style="display: none;"> reset</a></h4>
+                                        </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                        <div id="bgt-cycle-chart">
+                                            <h4 class="text-center">Cycle <a class="reset" href="javascript:bgtCycleChart.filterAll('budgetGroup');dc.redrawAll('budgetGroup');" style="display: none;"> reset</a></h4>
+                                        </div>
+                                            </div>
+                                        <div class="col-md-3">
+                                         <div id="bgt-level-chart">
+                                            <h4 class="text-center">Level <a class="reset" href="javascript:bgtLevelChart.filterAll('budgetGroup');dc.redrawAll('budgetGroup');" style="display: none;"> reset</a></h4>
+                                        </div></div><a class="pull-right reset_all" href='javascript:dc.filterAll("budgetGroup"); dc.renderAll("budgetGroup");'>Reset All</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="panel panel-default">
+                                    <div class="panel-body">
+                                        <a class="pull-right reset_all" href='javascript:dc.filterAll("budgetGroup"); dc.renderAll("budgetGroup");'>Reset All</a>
+                                        <div class="col-md-3">
+                                        <div id="bgt-yearly-bar-chart">
+                                            <h4 class="text-center">Average Deviation <a class="reset" href="javascript:bgtYearlyBarChart.filterAll('budgetGroup');dc.redrawAll('budgetGroup');" style="display: none;"> reset</a></h4>
+                                        </div>
+                                            </div>
+                                        <div class="col-md-2">
+                                        <div id="bgt-deviation-chart">
+                                            <h4 class="text-center">Budget/Utilization Deviation <a class="reset" href="javascript:bgtDeviationChart.filterAll('budgetGroup');dc.redrawAll('budgetGroup');" style="display: none;"> reset</a></h4>
+                                        </div>
+                                            </div>
+                                        <div class="col-md-6">
+                                            <h4 class="text-center">Budget Deviation and Total Budget Volume</h4>
+                                            <div id="bgt-monthly-dev-chart"></div>
+
+                                            <div id="bgt-order-volume-chart"></div>
+                                        </div>
+
+
+                                    </div>
+                                </div>
+                            </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="panel panel-default">
+                                    <div class="">
+                                        <div id="bgt-data-count" class="dc-bgt-data-count pull-right">
+                                            <span class="filter-count"></span> selected out of <span class="total-count"></span> records. <a href='javascript:dc.filterAll("budgetGroup"); dc.renderAll("budgetGroup");'>Reset All</a>
+                                        </div>
+                                        <h4>Issues with Highest and Lowest Issues/Plan Deviation</h4>
+                                    </div>
+                                    <div class="panel-body">
+
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <table id="bgt-data-table" class="dc-bgt-data-table table">
+                                                    <thead>
+                                                    <tr class="header">
+                                                        <th>Cycle</th>
+                                                        <th>Facility</th>
+                                                        <th>Deviation</th>
+                                                    </tr>
+                                                    </thead>
+                                                </table>
+                                            </div>
+
+                                            <div class="col-md-6">
+                                                <table id="bgt-data-table-low" class="dc-lowest-bgt-data-table table">
+                                                    <thead>
+                                                    <tr class="header">
+                                                        <th>Cycle</th>
+                                                        <th>Facility</th>
+                                                        <th>Deviation</th>
+                                                    </tr>
+                                                    </thead>
+                                                </table>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    </div>
+
+                    <div class="tab-pane" id="updaterate">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="panel panel-default">
+                                    <div class="panel-body">
+                                Deviations are calculated using Budget ceiling divided by number of cycles. Budget spent is within bounds when the budget is 90 - 110% of cycle budget.
+                                Budget that exceed a cycle budget by more than 110% are "over", and Budget that are less than 90% of a cycle budget are "under".
+                                    </div>
+                                </div>
+                            </div>
+                            <div class ="col-md-12">
+                                <div class ="panel panel-default">
+                                    <div class="panel-body">
+                                        <div class="col-md-4">
+                                        <div id="bgt-ccr-chart">
+                                            <h4 class="text-center">CCR Region <a class="reset" href="javascript:bgtCcrChart.filterAll('budgetGroup');dc.redrawAll('budgetGroup');" style="display: none;"> reset</a></h4>
+                                        </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                        <div id="bgt-cycle-chart">
+                                            <h4 class="text-center">Cycle <a class="reset" href="javascript:bgtCycleChart.filterAll('budgetGroup');dc.redrawAll('budgetGroup');" style="display: none;"> reset</a></h4>
+                                        </div>
+                                            </div>
+                                        <div class="col-md-3">
+                                         <div id="bgt-level-chart">
+                                            <h4 class="text-center">Level <a class="reset" href="javascript:bgtLevelChart.filterAll('budgetGroup');dc.redrawAll('budgetGroup');" style="display: none;"> reset</a></h4>
+                                        </div></div><a class="pull-right reset_all" href='javascript:dc.filterAll("budgetGroup"); dc.renderAll("budgetGroup");'>Reset All</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="panel panel-default">
+                                    <div class="panel-body">
+                                        <a class="pull-right reset_all" href='javascript:dc.filterAll("budgetGroup"); dc.renderAll("budgetGroup");'>Reset All</a>
+                                        <div class="col-md-3">
+                                        <div id="bgt-yearly-bar-chart">
+                                            <h4 class="text-center">Average Deviation <a class="reset" href="javascript:bgtYearlyBarChart.filterAll('budgetGroup');dc.redrawAll('budgetGroup');" style="display: none;"> reset</a></h4>
+                                        </div>
+                                            </div>
+                                        <div class="col-md-2">
+                                        <div id="bgt-deviation-chart">
+                                            <h4 class="text-center">Budget/Utilization Deviation <a class="reset" href="javascript:bgtDeviationChart.filterAll('budgetGroup');dc.redrawAll('budgetGroup');" style="display: none;"> reset</a></h4>
+                                        </div>
+                                            </div>
+                                        <div class="col-md-6">
+                                            <h4 class="text-center">Budget Deviation and Total Budget Volume</h4>
+                                            <div id="bgt-monthly-dev-chart"></div>
+
+                                            <div id="bgt-order-volume-chart"></div>
+                                        </div>
+
+
+                                    </div>
+                                </div>
+                            </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="panel panel-default">
+                                    <div class="">
+                                        <div id="bgt-data-count" class="dc-bgt-data-count pull-right">
+                                            <span class="filter-count"></span> selected out of <span class="total-count"></span> records. <a href='javascript:dc.filterAll("budgetGroup"); dc.renderAll("budgetGroup");'>Reset All</a>
+                                        </div>
+                                        <h4>Issues with Highest and Lowest Issues/Plan Deviation</h4>
+                                    </div>
+                                    <div class="panel-body">
+
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <table id="bgt-data-table" class="dc-bgt-data-table table">
+                                                    <thead>
+                                                    <tr class="header">
+                                                        <th>Cycle</th>
+                                                        <th>Facility</th>
+                                                        <th>Deviation</th>
+                                                    </tr>
+                                                    </thead>
+                                                </table>
+                                            </div>
+
+                                            <div class="col-md-6">
+                                                <table id="bgt-data-table-low" class="dc-lowest-bgt-data-table table">
+                                                    <thead>
+                                                    <tr class="header">
+                                                        <th>Cycle</th>
+                                                        <th>Facility</th>
+                                                        <th>Deviation</th>
+                                                    </tr>
+                                                    </thead>
+                                                </table>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    </div>
+
+                    <div class="tab-pane" id="wastagerate">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="panel panel-default">
