Many changes to core stuff. Cleanups mainly

--- a/dashboard/static/views/main.html
+++ b/dashboard/static/views/main.html
@@ -18,7 +18,7 @@
      <h3>KEY METRICS</h3>
         <div class="quality_test" ui-sref-active="quality_test_active">
             <a ui-sref="home.reportingRate">
-                <span class="quality_test__metric">{{reportingRate}} 0</span>
+                <span class="quality_test__metric"> 0</span>
                 <span class="quality_test__description">{{"Stock on hand" | uppercase}}</span>
             </a>
         </div>
@@ -30,7 +30,7 @@
         </div>
         <div class="quality_test" ui-sref-active="quality_test_active">
             <a ui-sref="home.guidlineAdherenceRate">
-                <span class="quality_test__metric">{{adherenceRate }} 0</span>
+                <span class="quality_test__metric"> 0</span>
                 <span class="quality_test__description">{{"Months of stock left" | uppercase}}</span>
             </a>
         </div>
