--- a/dashboard/static/views/table.html
+++ b/dashboard/static/views/table.html
@@ -7,11 +7,10 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="facility in $data">
-                <td>
-                    {{facility.name}}
+            <tr >
+                <td>FACILITYNAME{{facility.name}}
                 </td>
-                <td>{{facility.ip}}</td>
+                <td>FacilityIP</td>
             </tr>
         </tbody>
     </table>
