--- a/dashboard/static/views/reporting_rate.html
+++ b/dashboard/static/views/reporting_rate.html
@@ -8,10 +8,10 @@
             <div class="panel-heading">
                 <h3 class="panel-title"><span>District:</span>
                 <div class="dropdown ranking-dropdown">
-                    <a class="dropdown-toggle " data-toggle="dropdown"> {{worstPerforming}} <b class="caret"></b></a>
+                    <a class="dropdown-toggle " data-toggle="dropdown"> <b class="caret"></b></a>
                     <ul class="dropdown-menu">
 
-                        <li ng-repeat="level in rankingLevels"><a ng-click="selectWorst(level)">{{level}}</a></li>
+                        <li ng-repeat="level in rankingLevels"><a></a></li>
 
                     </ul>
                 </div>
