--- a/dashboard/templates/about_tests.html
+++ b/dashboard/templates/about_tests.html
@@ -241,7 +241,7 @@
   other. The specific datapoints compared are:<br>
   <br>
   1) For Sample Formulation 1,<b> Adult TDF/3TC/EFV</b>: Compares bimonthly
-  Consumption volumes of formulation <u>Tenofovir/Lamivudine/Efavirenz
+  Consumption volumes of vaccine <u>Tenofovir/Lamivudine/Efavirenz
   (TDF/3TC/EFV) 300mg/300mg/600mg[Pack 30]</u> (converted into an estimated
   Patients figure by dividing by 2.0) with Patient Numbers for regimens <u>TDF/3TC/EFV
   (ADULT)</u> and <u>TDF/3TC/EFV (PMTCT)</u><br style='mso-special-character:
@@ -251,7 +251,7 @@
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-GB style='font-size:10.0pt;
   mso-fareast-language:EN-GB;color:black'>2) For Sample Formulation 2, <b>Paediatric
-  ABC/3TC</b>: Compares bimonthly Consumption volumes of formulation <u>Abacavir/Lamivudine
+  ABC/3TC</b>: Compares bimonthly Consumption volumes of vaccine <u>Abacavir/Lamivudine
   (ABC/3TC) 60mg/30mg [Pack 60]</u> (converted into an estimated Patients
   figure by dividing by 4.6) with Patient Numbers for regimens <u>ABC/3TC/EFV
   (PAED)</u>, <u>ABC/3TC/NVP (PAED)</u> and <u>ABC/3TC/LPV/r (PAED)<br
@@ -261,7 +261,7 @@
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-GB style='font-size:10.0pt;
   mso-fareast-language:EN-GB;color:black'>3) For Sample Formulation 3, <b>Paediatric EFV</b>:
-  Compares bimonthly Consumption volumes of formulation <u>Efavirenz (EFV)
+  Compares bimonthly Consumption volumes of vaccine <u>Efavirenz (EFV)
   200mg [Pack 90]</u> (converted into an estimated Patients figure by dividing
   by 1.0) with Patient Numbers for regimens <u>ABC/3TC/EFV (PAED)</u> and <u>AZT/3TC/EFV
   (PAED)</u><o:p></o:p></span></p>
