--- a/dashboard/templates/scores_table.html
+++ b/dashboard/templates/scores_table.html
@@ -33,7 +33,7 @@
                 {% endfor %}
             </select>
             <select name="formulation" id="formulation_select" class="filter">
-                {% for formulation in formulations %}
+                {% for vaccine in formulations %}
                     <option value="{{ formulation }}">{{ formulation }}</option>
                 {% endfor %}
             </select>
