--- a/dashboard/templates/check/orderFormFreeOfNegativeNumbers.html
+++ b/dashboard/templates/check/orderFormFreeOfNegativeNumbers.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <span class="score_detail_data_title col-md-12">{{ data.main_title }}</span>
-    {% for formulation in data.formulations %}
+    {% for vaccine in data.formulations %}
         <div class="col-md-offset-2 col-md-8">
             <table class="table table-striped table-bordered">
                 <thead>
