--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -31,7 +31,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/#">Vaccines Dashboard</a>
+            <a class="navbar-brand" href="/#">Vaccines</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -74,13 +74,10 @@
 <script type="text/javascript" src='{% static "vendor/c3/c3.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/angular-chart/angular-chart.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/ng-table/dist/ng-table.js"%}'></script>
-<script type="text/javascript" src='{% static "js/app.js" %}'></script>
-<script type="text/javascript" src='{% static "js/services/report.service.js" %}'></script>
-<script type="text/javascript" src='{% static "js/controllers/home.controller.js" %}'></script>
-<script type="text/javascript" src='{% static "js/controllers/report.rate.controller.js" %}'></script>
-<script type="text/javascript" src='{% static "js/controllers/web.based.rate.controller.js" %}'></script>
-<script type="text/javascript" src='{% static "js/controllers/main.check.controller.js" %}'></script>
-<script type="text/javascript" src='{% static "js/controllers/guideline.adherence.controller.js" %}'></script>
+<script type="text/javascript" src='{% static "app/app.js" %}'></script>
+<script type="text/javascript" src='{% static "app/routes.js" %}'></script>
+<script type="text/javascript" src='{% static "app/components/coverage/coverageController.js" %}'></script>
+
 {% block js %}
 {% endblock js %}
 </body>
