--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -76,7 +76,12 @@
 <script type="text/javascript" src='{% static "vendor/ng-table/dist/ng-table.js"%}'></script>
 <script type="text/javascript" src='{% static "app/app.js" %}'></script>
 <script type="text/javascript" src='{% static "app/routes.js" %}'></script>
+<script type="text/javascript" src='{% static "app/shared/report.service.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/coverage/coverageController.js" %}'></script>
+<script type="text/javascript" src='{% static "app/components/fridge/fridgeController.js" %}'></script>
+<script type="text/javascript" src='{% static "app/components/stock/stockController.js" %}'></script>
+<script type="text/javascript" src='{% static "app/components/surveillance/surveillanceController.js" %}'></script>
+
 
 {% block js %}
 {% endblock js %}
