--- a/dashboard/static/app/components/stock/main.html
+++ b/dashboard/static/app/components/stock/main.html
@@ -16,7 +16,7 @@
 
     <div class="col-md-12">
      <h3>KEY METRICS</h3>
-        <div class="quality_test">
+        <div class="quality_test" ui-sref-active="quality_test_active">
             <a ui-sref="stock.stockonhand">
                 <span class="quality_test__metric"> 0</span>
                 <span class="quality_test__description">{{"Stock At Hand" | uppercase}}</span>
@@ -28,13 +28,13 @@
                 <span class="quality_test__description">{{"AMC" | uppercase}}</span>
             </a>
         </div>
-        <div class="quality_test">
+        <div class="quality_test" ui-sref-active="quality_test_active">
             <a ui-sref="stock.monthsleft">
                 <span class="quality_test__metric"> 0</span>
                 <span class="quality_test__description">{{"Months of Stock Left" | uppercase}}</span>
             </a>
         </div>
-        <div class="quality_test">
+        <div class="quality_test" ui-sref-active="quality_test_active">
             <a ui-sref="stock.uptakerate">
                 <span class="quality_test__metric"> 0</span>
                 <span class="quality_test__description">{{"Stock Uptake Rate" | uppercase}}</span>
