--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -1,6 +1,6 @@
 <div ng-controller="StockController">
     <h4 class="text-center">STOCK ON HAND</h4>
     <div class="page_graph">
-        <angular-chart options="options"></angular-chart>
+        <nvd3 options='options' data='data'></nvd3>
     </div>
 </div>
