--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -19,6 +19,11 @@
     <link rel="stylesheet" href='{% static "vendor/components-font-awesome/css/font-awesome.min.css"%}'>
     <link rel="stylesheet" href='{% static "vendor/select2/dist/css/select2.min.css"%}'>
     <link rel="stylesheet" href='{% static "vendor/multiple-select/multiple-select.css"%}'>
+
+
+
+
+    <link rel="stylesheet" href="bower_components/nvd3/build/nv.d3.css">
 </head>
 <body>
 
@@ -71,7 +76,9 @@
 <script type="text/javascript" src='{% static "vendor/lodash/lodash.min.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/checklist-model/checklist-model.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/d3/d3.js"%}'></script>
+<script type="text/javascript" src='{% static "vendor/nvd3/build/nv.d3.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/c3/c3.js"%}'></script>
+<script type="text/javascript" src='{% static "vendor/angular-nvd3/dist/angular-nvd3.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/angular-chart/angular-chart.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/ng-table/dist/ng-table.js"%}'></script>
 <script type="text/javascript" src='{% static "app/app.js" %}'></script>
