--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -19,11 +19,7 @@
     <link rel="stylesheet" href='{% static "vendor/components-font-awesome/css/font-awesome.min.css"%}'>
     <link rel="stylesheet" href='{% static "vendor/select2/dist/css/select2.min.css"%}'>
     <link rel="stylesheet" href='{% static "vendor/multiple-select/multiple-select.css"%}'>
-
-
-
-
-    <link rel="stylesheet" href="bower_components/nvd3/build/nv.d3.css">
+    <link rel="stylesheet" href='{% static "vendor/nvd3/build/nv.d3.css"%}'>
 </head>
 <body>
 
