--- a/dashboard/static/app/components/stock/main.html
+++ b/dashboard/static/app/components/stock/main.html
@@ -1,20 +1,26 @@
 <div class="row range_filter">
-    <div class="col-md-12">
+    <div class="col-md-12 main-filters">
         <h3 for="">FILTERS</h3>
-        <select name="name" class="form-control month-select" ng-model="startMonth"
+        <select name="name" class="form-control filter criteria-select" ng-model="startMonth"
             ng-options="month as month.name for month in months">
         </select>
     <div class="spacer">
         <h5 class="text-center"> - </h5>
     </div>
-        <select name="month" class="form-control month-select" ng-model="endMonth"
+        <select name="month" class="form-control filter criteria-select" ng-model="endMonth"
                 ng-options="month as month.name for month in months">
+        </select>
+    </div>
+        <h5 class="text-center"> - </h5>
+    </div>
+        <select name="vaccine" class="form-control filter criteria-select" ng-model="vaccine"
+                ng-options="vaccine as vaccine.name for vaccine in vaccines">
         </select>
     </div>
 
     </div>
-        <select name="vaccine" class="form-control month-select" ng-model="vaccine"
-                ng-options="vaccine as vaccine.name for vaccine in vaccines">
+        <select name="district" class="form-control filter criteria-select" ng-model="district"
+                ng-options="district as district.name for district in districts">
         </select>
     </div>
 
