--- a/dashboard/static/app/components/stock/main.html
+++ b/dashboard/static/app/components/stock/main.html
@@ -10,14 +10,14 @@
         <select name="month" class="form-control filter criteria-select" ng-model="endMonth"
                 ng-options="month as month.name for month in months">
         </select>
-    </div>
+    <div class="spacer">
         <h5 class="text-center"> - </h5>
     </div>
         <select name="vaccine" class="form-control filter criteria-select" ng-model="vaccine"
                 ng-options="vaccine as vaccine.name for vaccine in vaccines">
         </select>
-    </div>
-
+    <div class="spacer">
+        <h5 class="text-center"> - </h5>
     </div>
         <select name="district" class="form-control filter criteria-select" ng-model="district"
                 ng-options="district as district.name for district in districts">
