--- a/dashboard/static/css/app.css
+++ b/dashboard/static/css/app.css
@@ -5805,7 +5805,7 @@ button.list-group-item-danger.active:focus {
   border-radius: 3px;
 }
 .close {
-  float: right;
+
   font-size: 21px;
   font-weight: bold;
   line-height: 1;
@@ -6942,26 +6942,25 @@ td.score_WEB {
 td.score_PAPER {
   color: red;
 }
-.filter-title {
-  padding-left: 0px;
-}
+
 .filter-title h3 {
   margin-top: 0px;
 }
+
 .filter-tag {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
   padding-left: 0px;
   min-width: 18%;
-  border: 1px solid #27ae60;
+  border: 1px solid #2A448A;
   color: white;
-  background-color: #27ae60;
+  background-color: #2A448A;
   border-radius: 5px;
   text-align: center;
   line-height: 30px;
   margin-bottom: 10px;
-  margin-left: 4px;
+  margin-left: 6px;
 }
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
@@ -7089,6 +7088,8 @@ nav.with-flag {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
+  margin-top: 30px;
+  margin-bottom: 30px
 }
 .tags {
   -webkit-flex: 10;
@@ -7105,7 +7106,7 @@ nav.with-flag {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  padding: 0em;
+  padding: .2em;
   max-width: 10%;
 }
 .filter-tag button.close {
