--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -6,10 +6,22 @@
         </div>
     </div>
     <div class="col-md-6">
-        <table ng-table="tableParams" class="table" show-filter="true">
+
+           <div id="custom-search-input">
+                            <div class="input-group col-md-12">
+                                <input type="text" class="  search-query form-control" placeholder="Search" />
+                                <span class="input-group-btn">
+                                    <button class="btn btn-danger" type="button">
+                                        <span class=" glyphicon glyphicon-search"></span>
+                                    </button>
+                                </span>
+                            </div>
+                        </div>
+
+        <table ng-table="tableParams" class="table" show-filter="false">
             <tr ng-repeat="district in $data">
-                <td title="'label'" filter="{ label: 'text'}" sortable="'label'">{{district.label}}</td>
-                <td title="'value'" filter="{ value: 'number'}" sortable="'value'">{{district.value}}</td>
+                <td title="'District'" sortable="'district'">{{district.district}}</td>
+                <td title="'Units'" sortable="'value'">{{district.value}}</td>
             </tr>
         </table>
     </div>
