--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -9,7 +9,7 @@
 
            <div id="custom-search-input">
                             <div class="input-group col-md-12">
-                                <input type="text" class="  search-query form-control" placeholder="Search" />
+                                <input type="text" class="  search-query form-control" ng-model="searchText" placeholder="Search" />
                                 <span class="input-group-btn">
                                     <button class="btn btn-danger" type="button">
                                         <span class=" glyphicon glyphicon-search"></span>
@@ -19,7 +19,7 @@
                         </div>
 
         <table ng-table="tableParams" class="table" show-filter="false">
-            <tr ng-repeat="district in $data">
+            <tr ng-repeat="district in $data | filter:searchText">
                 <td title="'District'" sortable="'district'">{{district.district}}</td>
                 <td title="'Units'" sortable="'value'">{{district.value}}</td>
             </tr>
