Many changes - Deleted old unused files - Fixed routes to have angular take over - Changed menu system

--- a/dashboard/static/app/components/stock/uptakerate.html
+++ b/dashboard/static/app/components/stock/uptakerate.html
@@ -1,6 +1,6 @@
 <div ng-controller="UptakeRateController">
-    <h4 class="text-center">UPTAKE RATE</h4>
+    <h4 class="text-center">UPTAKE RATEs</h4>
     <div class="page_graph">
-        <angular-chart options="options"></angular-chart>
+
     </div>
 </div>
