--- a/dashboard/static/app/components/stock/stock.html
+++ b/dashboard/static/app/components/stock/stock.html
@@ -1,6 +1,5 @@
 <div class="row range_filter">
 
-
     <div class="filter-title col-md-12">
         <span class="filter-title h3">FILTERS</span>
 
@@ -64,10 +63,10 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-     <h3>KEY METRICS</h3>
+     <h3>KEY METRICS {{ selectedDistrict.name }}</h3>
         <div class="quality_test" ui-sref-active="quality_test_active">
-            <a ui-sref="stock.stockonhand">
-                <span class="quality_test__metric"> 0</span>
+            <a ui-sref="stock.home">
+                <span class="quality_test__metric"> {{ getOverallTotal() }} </span>
                 <span class="quality_test__description">{{"Stock At Hand" | uppercase}}</span>
             </a>
         </div>
