--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -1,27 +1,27 @@
 <div ng-controller="StockController">
     <h4 class="text-center">STOCK ON HAND</h4>
-    <div class="col-md-6">
+    <div class="col-md-8">
         <div class="page_graph">
-            <nvd3 options="options" data="data"></nvd3>
+            <nvd3 options="options" data="data.slice(1,4)"></nvd3>
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
 
            <div id="custom-search-input">
-                            <div class="input-group col-md-12">
-                                <input type="text" class="  search-query form-control" ng-model="searchText" placeholder="Search" />
-                                <span class="input-group-btn">
-                                    <button class="btn btn-danger" type="button">
-                                        <span class=" glyphicon glyphicon-search"></span>
-                                    </button>
-                                </span>
-                            </div>
-                        </div>
+                <div class="input-group col-md-12">
+                    <input type="text" class="  search-query form-control" ng-model="searchText" placeholder="Search" />
+                    <span class="input-group-btn">
+                        <button class="btn btn-danger" type="button">
+                            <span class=" glyphicon glyphicon-search"></span>
+                        </button>
+                    </span>
+                </div>
+           </div>
 
         <table ng-table="tableParams" class="table" show-filter="false">
-            <tr ng-repeat="district in $data | filter:searchText">
-                <td title="'District'" sortable="'district'">{{district.district}}</td>
-                <td title="'Units'" sortable="'value'">{{district.value}}</td>
+            <tr ng-repeat="district in data | filter:searchText">
+                <td title="'District'" sortable="'district'">{{district.key}}</td>
+                <td title="'Units'" sortable="'value'">{{getTotal(district.key)}}</td>
             </tr>
         </table>
     </div>
