More fixes on menu routes

--- a/dashboard/static/app/components/stock/stock.html
+++ b/dashboard/static/app/components/stock/stock.html
@@ -63,9 +63,9 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-     <h3>KEY METRICS {{ selectedDistrict.name }}</h3>
+     <h3>KEY METRICS</h3>
         <div class="quality_test" ui-sref-active="quality_test_active">
-            <a ui-sref="stock.home">
+            <a ui-sref="stock.stockonhand">
                 <span class="quality_test__metric"> {{ getOverallTotal() }} </span>
                 <span class="quality_test__description">{{"Stock At Hand" | uppercase}}</span>
             </a>
