--- a/dashboard/static/app/components/fridge/capacity.html
+++ b/dashboard/static/app/components/fridge/capacity.html
@@ -1,5 +1,5 @@
 <div ng-controller="FridgeController">
-    <h4 class="text-center">AMC ZVIHUTA</h4>
+    <h4 class="text-center">AVAILABLE CAPACITY</h4>
     <div class="col-md-8">
         <div class="page_graph">
             <nvd3 options="options" data="data.slice(1,4)"></nvd3>
