--- a/dashboard/static/app/components/stock/uptakerate.html
+++ b/dashboard/static/app/components/stock/uptakerate.html
@@ -1,5 +1,5 @@
 <div ng-controller="UptakeRateController">
-    <h4 class="text-center">UPTAKE RATEs</h4>
+    <h4 class="text-center">UPTAKE RATES</h4>
     <div class="page_graph">
 
     </div>
