--- a/dashboard/static/app/components/stock/amc.html
+++ b/dashboard/static/app/components/stock/amc.html
@@ -1,5 +1,5 @@
 <div ng-controller="AmcController">
-    <h4 class="text-center">AMC ZVIHUTA</h4>
+    <h4 class="text-center">AMC</h4>
     <div class="col-md-8">
         <div class="page_graph">
             <nvd3 options="options" data="data.slice(1,4)"></nvd3>
