--- a/dashboard/static/app/components/surveillance/surveillance.html
+++ b/dashboard/static/app/components/surveillance/surveillance.html
@@ -43,13 +43,13 @@
         <h5 class="text-center"> - </h5>
     </div>
         <select name="month" class="form-control filter criteria-select" ng-model="endMonth"
-                ng-options="month as month.name for month in months">
+                ng-options="month as month.name group by month.year for month in months">
         </select>
     <div class="spacer">
         <h5 class="text-center"> - </h5>
     </div>
         <select name="vaccine" class="form-control filter criteria-select" ng-model="selectedVaccine"
-                ng-options="vaccine as vaccine.name for vaccine in vaccines">
+                ng-options="vaccine as vaccine.name group by month.year for vaccine in vaccines">
         </select>
     <div class="spacer">
         <h5 class="text-center"> - </h5>
