--- a/dashboard/static/app/components/stock/stock.html
+++ b/dashboard/static/app/components/stock/stock.html
@@ -43,7 +43,7 @@
         <h5 class="text-center"> - </h5>
     </div>
         <select name="month" class="form-control filter criteria-select" ng-model="endMonth"
-                ng-options="month as month.name group by month.year for month in months">
+                ng-options="month as month.name group by month.year for month in months.slice(months.indexOf(startMonth))">
         </select>
     <div class="spacer">
         <h5 class="text-center"> - </h5>
@@ -59,6 +59,7 @@
         </select>
     </div>
 </div>
+{{ months.indexOf(startMonth)}}
 
 <div class="row">
     <div class="col-md-12">
