--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -19,9 +19,9 @@
            </div>
 
         <table ng-table="tableParams" class="table" show-filter="false">
-            <tr ng-repeat="district in data | filter:searchText">
-                <td title="'District'" sortable="'district'">{{district.key}}</td>
-                <td title="'Units'" sortable="'value'">{{getTotal(district.key)}}</td>
+            <tr ng-repeat="item in data | filter:searchText">
+                <td title="'District'" sortable="'district'">{{item.district}}</td>
+                <td title="'Units'" sortable="'value'">{{item.stockathand}}</td>
             </tr>
         </table>
     </div>
