--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -1,5 +1,6 @@
 <div ng-controller="StockController">
     <h4 class="text-center">STOCK ON HAND</h4>
+
     <div class="col-md-8">
         <div class="page_graph">
             <nvd3 options="options" data="data.slice(1,4)"></nvd3>
@@ -7,22 +8,24 @@
     </div>
     <div class="col-md-4">
 
-           <div id="custom-search-input">
-                <div class="input-group col-md-12">
-                    <input type="text" class="  search-query form-control" ng-model="searchText" placeholder="Search" />
-                    <span class="input-group-btn">
-                        <button class="btn btn-danger" type="button">
-                            <span class=" glyphicon glyphicon-search"></span>
-                        </button>
-                    </span>
-                </div>
-           </div>
+       <div id="custom-search-input">
+            <div class="input-group col-md-12">
+                <input type="text" class="  search-query form-control" ng-model="searchText" placeholder="Search" />
+                <span class="input-group-btn">
+                    <button class="btn btn-danger" type="button">
+                        <span class=" glyphicon glyphicon-search"></span>
+                    </button>
+                </span>
+            </div>
+       </div>
 
         <table ng-table="tableParams" class="table" show-filter="false">
-            <tr ng-repeat="item in data | filter:searchText">
+            <tr ng-repeat="item in $data | filter:searchText">
                 <td title="'District'" sortable="'district'">{{item.district}}</td>
                 <td title="'Units'" sortable="'value'">{{item.stockathand}}</td>
             </tr>
         </table>
     </div>
+
+
 </div>
