--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -3,7 +3,7 @@
 
     <div class="col-md-8">
         <div class="page_graph">
-            <nvd3 options="options" data="data.slice(1,4)"></nvd3>
+            <nvd3 options="options" data="graph"></nvd3>
         </div>
     </div>
     <div class="col-md-4">
