--- a/dashboard/static/app/components/stock/stock.html
+++ b/dashboard/static/app/components/stock/stock.html
@@ -65,7 +65,7 @@
      <h3>KEY METRICS</h3>
         <div class="quality_test" ui-sref-active="quality_test_active">
             <a ui-sref="stock.stockonhand">
-                <span class="quality_test__metric"> {{ getOverallTotal() }} </span>
+                <span class="quality_test__metric"> {{ totalstockathand }} </span>
                 <span class="quality_test__description">{{"Stock At Hand" | uppercase}}</span>
             </a>
         </div>
