--- a/dashboard/static/app/components/fridge/fridge.html
+++ b/dashboard/static/app/components/fridge/fridge.html
@@ -1,70 +1,72 @@
-<div class="row range_filter">
+<div ng-controller="MainController as mainvm">
+    <div class="row range_filter">
 
-    <div class="filter-title col-md-12">
-        <span class="filter-title h3">FILTERS</span>
-    </div>
+        <div class="filter-title col-md-12">
+            <span class="filter-title h3">FILTERS</span>
+        </div>
 
-    <div class="col-md-12 main-filters">
-        <select name="name" class="form-control filter criteria-select" ng-model="startMonth"
-            ng-options="month as month.name group by month.year for month in months">
-        </select>
-    <div class="spacer">
-        <h5 class="text-center"> - </h5>
-    </div>
-        <select name="month" class="form-control filter criteria-select" ng-model="endMonth"
+        <div class="col-md-12 main-filters">
+            <select name="name" class="form-control filter criteria-select" ng-model="startMonth"
                 ng-options="month as month.name group by month.year for month in months">
-        </select>
-    <div class="spacer">
-        <h5 class="text-center"> - </h5>
-    </div>
-        <select name="vaccine" class="form-control filter criteria-select" ng-model="selectedVaccine"
-                ng-options="vaccine as vaccine.name for vaccine in vaccines">
-        </select>
-    <div class="spacer">
-        <h5 class="text-center"> - </h5>
-    </div>
-        <select name="district" class="form-control filter criteria-select" ng-model="selectedDistrict"
-                ng-options="district as district.name for district in districts">
-        </select>
-    </div>
+            </select>
+        <div class="spacer">
+            <h5 class="text-center"> - </h5>
+        </div>
+            <select name="month" class="form-control filter criteria-select" ng-model="endMonth"
+                    ng-options="month as month.name group by month.year for month in months">
+            </select>
+        <div class="spacer">
+            <h5 class="text-center"> - </h5>
+        </div>
+            <select name="vaccine" class="form-control filter criteria-select" ng-model="selectedVaccine"
+                    ng-options="vaccine as vaccine.name for vaccine in vaccines">
+            </select>
+        <div class="spacer">
+            <h5 class="text-center"> - </h5>
+        </div>
+            <select name="district" class="form-control filter criteria-select" ng-model="selectedDistrict"
+                    ng-options="district as district.name for district in districts">
+            </select>
+        </div>
 
 
-</div>
-<div class="row">
-    <div class="col-md-12">
-     <h3>KEY METRICS</h3>
-        <div class="quality_test" ui-sref-active="quality_test_active">
-            <a ui-sref="fridge.facilities">
-                <span class="quality_test__metric"> 0 </span>
-                <span class="quality_test__description">{{"Immunizing Facilities" | uppercase}}</span>
-            </a>
-        </div>
-        <div class="quality_test" ui-sref-active="quality_test_active">
-            <a ui-sref="fridge.coverage">
-                <span class="quality_test__metric"> 0</span>
-                <span class="quality_test__description">{{"Fridge Coverage" | uppercase}}</span>
-            </a>
-        </div>
-        <div class="quality_test" ui-sref-active="quality_test_active">
-            <a ui-sref="fridge.workingstatus">
-                <span class="quality_test__metric"> 0</span>
-                <span class="quality_test__description">{{"Working Status" | uppercase}}</span>
-            </a>
-        </div>
-        <div class="quality_test" ui-sref-active="quality_test_active">
-            <a ui-sref="fridge.capacity">
-                <span class="quality_test__metric"> 0</span>
-                <span class="quality_test__description">{{"Available Capacity" | uppercase}}</span>
-            </a>
-        </div>
     </div>
-
-</div>
-<div class="row">
-    <div class="col-md-12">
-        <div class="test-area clearfix">
-            <div ui-view></div>
+    <div class="row">
+        <div class="col-md-12">
+         <h3>KEY METRICS</h3>
+            <div class="quality_test" ui-sref-active="quality_test_active">
+                <a ui-sref="fridge.facilities">
+                    <span class="quality_test__metric"> 0 </span>
+                    <span class="quality_test__description">{{"Immunizing Facilities" | uppercase}}</span>
+                </a>
+            </div>
+            <div class="quality_test" ui-sref-active="quality_test_active">
+                <a ui-sref="fridge.coverage">
+                    <span class="quality_test__metric"> 0</span>
+                    <span class="quality_test__description">{{"Fridge Coverage" | uppercase}}</span>
+                </a>
+            </div>
+            <div class="quality_test" ui-sref-active="quality_test_active">
+                <a ui-sref="fridge.workingstatus">
+                    <span class="quality_test__metric"> 0</span>
+                    <span class="quality_test__description">{{"Working Status" | uppercase}}</span>
+                </a>
+            </div>
+            <div class="quality_test" ui-sref-active="quality_test_active">
+                <a ui-sref="fridge.capacity">
+                    <span class="quality_test__metric"> 0</span>
+                    <span class="quality_test__description">{{"Available Capacity" | uppercase}}</span>
+                </a>
+            </div>
         </div>
-    </div>
 
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="test-area clearfix">
+                <div ui-view></div>
+            </div>
+        </div>
+
+    </div>
 </div>
