--- a/dashboard/static/app/components/stock/stock.html
+++ b/dashboard/static/app/components/stock/stock.html
@@ -1,77 +1,82 @@
-<div class="row range_filter">
+<div ng-controller="MainController as shell">
 
-    <div class="filter-title col-md-12">
-        <span class="filter-title h3">FILTERS</span>
-    </div>
+    <div class="row range_filter">
 
-    <div class="col-md-12 main-filters">
-        <select name="name" class="form-control filter criteria-select" ng-model="startMonth"
-            ng-options="month as month.name group by month.year for month in months">
-        </select>
-    <div class="spacer">
-        <h5 class="text-center"> - </h5>
-    </div>
-        <select name="month" class="form-control filter criteria-select" ng-model="endMonth"
-                ng-options="month as month.name group by month.year for month in months.slice(months.indexOf(startMonth))">
-        </select>
-    <div class="spacer">
-        <h5 class="text-center"> - </h5>
-    </div>
-        <select name="vaccine" class="form-control filter criteria-select" ng-model="selectedVaccine"
-                ng-options="vaccine as vaccine.name for vaccine in vaccines">
-        </select>
-    <div class="spacer">
-        <h5 class="text-center"> - </h5>
-    </div>
-        <select name="district" class="form-control filter criteria-select" ng-model="selectedDistrict"
-                ng-options="district as district.name for district in districts">
-        </select>
-    </div>
-</div>
+        <div class="filter-title col-md-12">
+            <span class="filter-title h3">FILTERS</span>
+        </div>
 
-<div class="row">
-    <div class="col-md-12">
-     <h3>KEY METRICS</h3>
-        <div class="quality_test" ui-sref-active="quality_test_active">
-            <a ui-sref="stock.stockonhand">
-                <span class="quality_test__metric"> {{ totalstockathand | number:0 }} </span>
-                <span class="quality_test__description">{{"Stock At Hand" | uppercase}}</span>
-            </a>
+        <div class="col-md-12 main-filters">
+            <select name="name" class="form-control filter criteria-select" ng-model="shell.startMonth"
+                ng-options="month as month.name group by month.year for month in shell.months">
+            </select>
+        <div class="spacer">
+            <h5 class="text-center"> - </h5>
         </div>
-        <div class="quality_test" ui-sref-active="quality_test_active">
-            <a ui-sref="stock.amc">
-                <span class="quality_test__metric"> 0</span>
-                <span class="quality_test__description">{{"AMC" | uppercase}}</span>
-            </a>
+            <select name="month" class="form-control filter criteria-select" ng-model="shell.endMonth"
+                    ng-options="month as month.name group by month.year for month in shell.months.slice(shell.months.indexOf(shell.startMonth))">
+            </select>
+        <div class="spacer">
+            <h5 class="text-center"> - </h5>
         </div>
-        <div class="quality_test" ui-sref-active="quality_test_active">
-            <a ui-sref="stock.monthsleft">
-                <span class="quality_test__metric"> 0</span>
-                <span class="quality_test__description">{{"Months of Stock Left" | uppercase}}</span>
-            </a>
+            <select name="vaccine" class="form-control filter criteria-select" ng-model="shell.selectedVaccine"
+                    ng-options="vaccine as vaccine.name for vaccine in shell.vaccines">
+            </select>
+        <div class="spacer">
+            <h5 class="text-center"> - </h5>
         </div>
-        <div class="quality_test" ui-sref-active="quality_test_active">
-            <a ui-sref="stock.uptakerate">
-                <span class="quality_test__metric"> 0</span>
-                <span class="quality_test__description">{{"Stock Uptake Rate" | uppercase}}</span>
-            </a>
+            <select name="district" class="form-control filter criteria-select" ng-model="shell.selectedDistrict"
+                    ng-options="district as district.name for district in shell.districts">
+            </select>
         </div>
-        <!--
-        <div class="quality_test">
-            <a ui-sref="stock.wastagerate">
-                <span class="quality_test__metric"> 0</span>
-                <span class="quality_test__description">{{"Wastage Rate" | uppercase}}</span>
-            </a>
-        </div>
-        -->
     </div>
 
-</div>
-<div class="row">
-    <div class="col-md-12">
-        <div class="test-area clearfix">
-            <div ui-view></div>
+    <div class="row">
+        <div class="col-md-12">
+         <h3>KEY METRICS</h3>
+            <div class="quality_test" ui-sref-active="quality_test_active">
+                <a ui-sref="stock.stockonhand">
+                    <span class="quality_test__metric"> {{ totalstockathand | number:0 }} </span>
+                    <span class="quality_test__description">{{"Stock At Hand" | uppercase}}</span>
+                </a>
+            </div>
+            <div class="quality_test" ui-sref-active="quality_test_active">
+                <a ui-sref="stock.amc">
+                    <span class="quality_test__metric"> 0</span>
+                    <span class="quality_test__description">{{"AMC" | uppercase}}</span>
+                </a>
+            </div>
+            <div class="quality_test" ui-sref-active="quality_test_active">
+                <a ui-sref="stock.monthsleft">
+                    <span class="quality_test__metric"> 0</span>
+                    <span class="quality_test__description">{{"Months of Stock Left" | uppercase}}</span>
+                </a>
+            </div>
+            <div class="quality_test" ui-sref-active="quality_test_active">
+                <a ui-sref="stock.uptakerate">
+                    <span class="quality_test__metric"> 0</span>
+                    <span class="quality_test__description">{{"Stock Uptake Rate" | uppercase}}</span>
+                </a>
+            </div>
+            <!--
+            <div class="quality_test">
+                <a ui-sref="stock.wastagerate">
+                    <span class="quality_test__metric"> 0</span>
+                    <span class="quality_test__description">{{"Wastage Rate" | uppercase}}</span>
+                </a>
+            </div>
+            -->
         </div>
+
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="test-area clearfix">
+                <div ui-view></div>
+            </div>
+        </div>
+
+    </div>
+
 
 </div>
