--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -81,6 +81,7 @@
 <script type="text/javascript" src='{% static "app/routes.js" %}'></script>
 <script type="text/javascript" src='{% static "app/shared/filter.service.js" %}'></script>
 <script type="text/javascript" src='{% static "app/shared/report.service.js" %}'></script>
+<script type="text/javascript" src='{% static "app/shared/mainController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/coverage/coverageController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/fridge/fridgeController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/stock/stockController.js" %}'></script>
