--- a/dashboard/static/app/components/stock/stock.html
+++ b/dashboard/static/app/components/stock/stock.html
@@ -1,5 +1,7 @@
 <div ng-controller="MainController as shell">
 
+    {{ $scope }}
+
     <div class="row range_filter">
 
         <div class="filter-title col-md-12">
@@ -30,6 +32,7 @@
             </select>
         </div>
     </div>
+
 
 
     <div class="row">
