--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -7,7 +7,7 @@
 
     <div class="col-md-8">
         <div class="page_graph">
-            <nvd3 options="options" data="graph"></nvd3>
+            <nvd3 options="vm.options" data="vm.graph"></nvd3>
         </div>
     </div>
     <div class="col-md-4">
@@ -23,14 +23,10 @@
             </div>
        </div>
 
-
-
-
-
-        <table datatable="ng" class="table" show-filter="false">
-            <tr ng-repeat="item in vm.data | filter:searchText">
-                <td title="'District'" sortable="'district'">{{item.district}}</td>
-                <td title="'Units'" sortable="'value'">{{ item.stockathand | number:0}}</td>
+        <table ng-table="vm.tableParams" class="table" show-filter="false">
+            <tr ng-repeat="row in vm.data | filter:searchText">
+                <td title="'District'" sortable="'district'">{{row.district}}</td>
+                <td title="'Units'" sortable="'value'">{{row.stockathand}}</td>
             </tr>
         </table>
     </div>
