--- a/dashboard/static/app/components/fridge/fridge.html
+++ b/dashboard/static/app/components/fridge/fridge.html
@@ -1,4 +1,5 @@
-<div ng-controller="MainController as mainvm">
+<div ng-controller="MainController as shell">
+
     <div class="row range_filter">
 
         <div class="filter-title col-md-12">
@@ -6,28 +7,29 @@
         </div>
 
         <div class="col-md-12 main-filters">
-            <select name="name" class="form-control filter criteria-select" ng-model="startMonth"
-                ng-options="month as month.name group by month.year for month in months">
+            <select name="name" class="form-control filter criteria-select" ng-model="shell.startMonth"
+                ng-options="month as month.name group by month.year for month in shell.months">
             </select>
         <div class="spacer">
             <h5 class="text-center"> - </h5>
         </div>
-            <select name="month" class="form-control filter criteria-select" ng-model="endMonth"
-                    ng-options="month as month.name group by month.year for month in months">
+            <select name="month" class="form-control filter criteria-select" ng-model="shell.endMonth"
+                    ng-options="month as month.name group by month.year for month in shell.months.slice(shell.months.indexOf(shell.startMonth))">
             </select>
         <div class="spacer">
             <h5 class="text-center"> - </h5>
         </div>
-            <select name="vaccine" class="form-control filter criteria-select" ng-model="selectedVaccine"
-                    ng-options="vaccine as vaccine.name for vaccine in vaccines">
+            <select name="vaccine" class="form-control filter criteria-select" ng-model="shell.selectedVaccine"
+                    ng-options="vaccine as vaccine.name for vaccine in shell.vaccines">
             </select>
         <div class="spacer">
             <h5 class="text-center"> - </h5>
         </div>
-            <select name="district" class="form-control filter criteria-select" ng-model="selectedDistrict"
-                    ng-options="district as district.name for district in districts">
+            <select name="district" class="form-control filter criteria-select" ng-model="shell.selectedDistrict"
+                    ng-options="district as district.name for district in shell.districts">
             </select>
         </div>
+    </div>
 
 
     </div>
