--- a/dashboard/static/app/components/stock/stock.html
+++ b/dashboard/static/app/components/stock/stock.html
@@ -32,14 +32,12 @@
     </div>
 
 
-
-
     <div class="row">
         <div class="col-md-12">
          <h3>KEY METRICS</h3>
             <div class="quality_test" ui-sref-active="quality_test_active">
                 <a ui-sref="stock.stockonhand">
-                    <span class="quality_test__metric"> {{ child.totalstockathand | number:0 }} </span>
+                    <span class="quality_test__metric"> {{ child.stockathand | number:0 }} </span>
                     <span class="quality_test__description">{{"Stock At Hand" | uppercase}}</span>
                 </a>
             </div>
